# Agentic-AI-System-Design

./: README.md
caching/: caching_openai.py
capstone/: .gitignore  pyproject.toml
capstone/claude_project/: config.yaml  main.py  mcp_servers.json
capstone/claude_project/agent/: factory.py  orchestrator.py  tools.py
capstone/claude_project/context/indexers/: code_parser.py  factory.py  hybrid_qdrant.py  semantic_chroma.py  semantic_qdrant.py
capstone/claude_project/context/retrievers/: factory.py  hybrid_qdrant.py  semantic_chroma.py  semantic_qdrant.py
capstone/claude_project/llm/: factory.py
capstone/claude_project/mcp/: mcp_client.py  mcp_config.py
capstone/claude_project/memory/: session.py  short_term.py
capstone/claude_project/skills/: registry.py  skill_tools.py
capstone/claude_project/tasks/: approval.py  executor.py  orchestrator.py  planner.py  recovery.py  status.py  task_store.py
capstone/claude_project/tools/: filesystem_tools.py  terminal_tools.py
wealth_advisor/: .gitignore  examples.md  pyproject.toml
wealth_advisor/.memory/: current_session
wealth_advisor/.skills/portfolio_analysis/: SKILL.md
wealth_advisor/.skills/portfolio_dashboard/: SKILL.md
wealth_advisor/.skills/sip_recommendation/: SKILL.md
wealth_advisor/.skills/tax_planning/: SKILL.md
wealth_advisor/financial_analyst/: config.yaml  main.py  mcp_servers.json  scheduler.py
wealth_advisor/financial_analyst/agent/: factory.py  guardrails.py  market_data.py  orchestrator.py  tools.py
wealth_advisor/financial_analyst/analysis/: rebalance.py  weekly_review.py
wealth_advisor/financial_analyst/ingestion/: parse_portfolio.py  parse_statement.py
wealth_advisor/financial_analyst/knowledge_base/: indexer.py
wealth_advisor/financial_analyst/knowledge_base/docs/: mutual_funds.md  rbi_guidelines.md  retirement_and_sip_playbook.md  sebi_rules.md  stock_symbols_reference.md  tax_rules_india.md
wealth_advisor/financial_analyst/knowledge_base/sample_data/: sample_bank_statement.csv  sample_portfolio.csv
wealth_advisor/financial_analyst/llm/: factory.py
wealth_advisor/financial_analyst/mcp/: mcp_client.py  mcp_config.py
wealth_advisor/financial_analyst/mcp_servers/: broker_mock_server.py
wealth_advisor/financial_analyst/memory/: goal_store.py  portfolio_store.py  profile_store.py  session.py  short_term.py  watchlist_store.py
wealth_advisor/financial_analyst/rag/: retriever_tool.py
wealth_advisor/financial_analyst/skills/: registry.py  skill_tools.py
wealth_advisor/financial_analyst/tasks/: approval.py  planner.py
(+29 files in other folders)
