[project]
name = "wealth-advisor"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Nagarkar", email="nagarkar.niki@gmail.com"}
]
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openai (>=2.45.0,<3.0.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "langchain (>=1.3.13,<2.0.0) ; python_version >= \"3.12\" and python_full_version < \"4.0.0\"",
    "langchain-openai (>=1.3.5,<2.0.0) ; python_version >= \"3.12\" and python_full_version < \"4.0.0\"",
    "langchain-anthropic (>=1.4.8,<2.0.0) ; python_version >= \"3.12\" and python_full_version < \"4.0.0\"",
    "langchain-huggingface (>=1.2.2,<2.0.0) ; python_version >= \"3.12\" and python_full_version < \"4.0.0\"",
    "langgraph-checkpoint-sqlite (>=3.1.0,<4.0.0)",
    "langchain-mcp-adapters (>=0.3.0,<0.4.0)",
    "mcp (>=1.6.0,<2.0.0)",
    "apscheduler (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "financial_analyst"}]


[tool.poetry.scripts]
financial_analyst = "financial_analyst.main:run"

